--- a/计算机网络基础/网络安全.md
+++ b/计算机网络基础/网络安全.md
@@ -6,6 +6,8 @@
 # **目录**
 
 ## <a href="#tongyuan">一、同源策略</a>
+## <a href="#XSS">二、XSS</a>
+## <a href="#CSRF">二、CSRF</a>
 
 ### [一、同源策略](#tongyuan)
 
@@ -45,3 +47,30 @@ pdom.body.style.display = 'none';
 
 * 第三个，网络层面
 限制了通过XMLHttpRequest等方式将站点的数据发送给不同源的站点
+
+### [二、XSS](#XSS)
+
+### 什么是XSS
+
+XSS(Cross Site Script) 跨站脚本攻击。指的是攻击者想网页注入恶意的客户端代码，通过恶意的脚本对客户端网页进行篡改，从而在用户浏览网页时，对用户浏览器进行控制或者获取用户隐私数据的一种攻击方式。例如：
+
+* 可以窃取Cookie信息，恶意的javaScript可以通过document.cookie获取cookie信息，然后通过XMLHttpRequest或者Fetch加上CORS功能将数据发送给恶意服务器，恶意服务器拿到用户的Cookie信息之后，就可以在其他电脑上模拟用户的登录，然后进行转账等操作。
+* 可以监听用户的行为，可以使用addEventLisener接口来监听键盘事件，获取比如信用卡等信息，进行恶意操作
+
+注入恶意脚本分3种方式：
+
+* 存储型： 攻击被存储在服务端，常见的是在评论区插入攻击脚本，如果存到服务端，那么所有的用户都会受到攻击
+* 反射性： 攻击者将脚本混在URL里，服务端接收到URL将恶意代码当做参数取出并拼接在HML里返回，浏览器解析此HTML后执行恶意代码，
+* DOM型： 攻击者将恶意脚本注入用户的页面中。
+
+### XSS防御
+
+* 输入检查： 对输入内容进行过滤或者转义
+* 设置httpOnly： 可以防止JavaScript获取Cookie，只能在HTTP请求过程中使用cookie
+* 开启CSP白名单： 可以阻止白名单以外的资源加载和运行
+
+### [二、CSRF](#CSRF)
+
+跨站请求伪造
+
+是一种劫持受信任用户向服务器发送预期请求的攻击方式，它是攻击者借助受害者的Cookie片区服务器的信任，但是它并不能拿到Cookie，也看不到Cookie的内容，它能做的就是给服务器发送请求，然后执行请求中所描述的命令，以此来改变服务器中的数据，也就是并不能窃取到服务器中的数据。
